[package]
name = "angular-units"
version = "0.2.2"
description = "A library for representing and manipulating angular quantities in various units."
authors = ["Tyler Reisinger <reisinger.tyler@gmail.com>"]
repository = "https://github.com/tylerreisinger/rust-angular-units"
homepage = "https://github.com/tylerreisinger/rust-angular-units"
documentation = "https://docs.rs/angular-units/0.2.1/angular_units/"
readme = "README.md"
keywords = ["angle", "angular", "units", "mathematics", "geometry"]
categories = ["science"]
license = "MIT"

[badges]
travis-ci = { repository = "tylerreisinger/rust-angular-units }

[features]
default = ["approx"]

[dependencies]
num = "^0.1"

[dependencies.approx]
version = "^0.1"
optional = true
