[package]
name = "angular-units"
version = "0.2.4"
description = "A library for representing, manipulating and converting between angular quantities in various units through a type-safe interace."
authors = ["Tyler Reisinger <reisinger.tyler@gmail.com>"]
repository = "https://github.com/tylerreisinger/rust-angular-units"
homepage = "https://github.com/tylerreisinger/rust-angular-units"
documentation = "https://docs.rs/angular-units/"
readme = "README.md"
keywords = ["angle", "angular", "units", "mathematics", "geometry"]
categories = ["science"]
license = "MIT"

[badges]
travis-ci = { repository = "tylerreisinger/rust-angular-units" }

[features]
default = ["approx"]

[dependencies]
num-traits = "^0.2"

[dev-dependencies]
serde_test = "1.0"

[dependencies.approx]
version = "^0.3"
optional = true

[dependencies.serde]
version = "^1.0"
optional = true
features = ["derive"]
